--- a/gb/23/10/10/n14091879.md
+++ b/gb/23/10/10/n14091879.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>资深法学家：“议会之声”修宪公投将失败</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/10/id14091891-David-Flint-600x400.jpg" />
-<h6>澳洲资深法学家大卫·弗林特教授（Prof David Flint）预测，2023年10月14日举行的24年来的首次公投，即原住民“议会之声”（THEVOICE）修宪公投最终将以失败落幕。 （李睿／大纪元）
+<h6>澳洲资深法学家大卫·弗林特教授（Prof David Flint）预测，2023年10月14日举行的24年来的首次公投，即原住民“议会之声”（THE VOICE）修宪公投最终将以失败落幕。 （李睿／大纪元）
 </h6>
 <hr>
-<p>【大纪元2023年10月10日讯】（大纪元记者李睿澳洲悉尼采访报导）澳洲<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%B5%84%E6%B7%B1%E6%B3%95%E5%AD%A6%E5%AE%B6.md#1">资深法学家</a>、澳洲新闻理事会（Australian Press Council）前主席大卫·弗林特教授（Prof David Flint）预测，即将在本周六（10月14日）举行的原住民<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E2%80%9C%E8%AE%AE%E4%BC%9A%E4%B9%8B%E5%A3%B0%E2%80%9D.md#1">“议会之声”</a>（THE VOICE）修宪<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%85%AC%E6%8A%95.md#1">公投</a>最终将以<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%B1%E8%B4%A5.md#1">失败</a>落幕。</p>
-<p>周一（10月9日），大卫·弗林特教授在澳洲人立宪君主制（Australians for Constitutional Monarchy）年会期间对大纪元表示，澳洲24年来的首次<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%85%AC%E6%8A%95.md#1">公投</a>将面临比1999年共和制公投遭遇更大的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%B1%E8%B4%A5.md#1">失败</a>。</p>
-<figure id="attachment_14091903" aria-describedby="caption-attachment-14091903" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/10/id14091903-ACM-panel.jpg"><img class="size-large wp-image-14091903" src="https://i.epochtimes.com/assets/uploads/2023/10/id14091903-ACM-panel-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14091903" class="wp-caption-text">2023年10月9日，澳洲人立宪君主制（Australians for Constitutional Monarchy）年会现场。（李睿／大纪元）</figcaption></figure>
+<p>【大纪元2023年10月10日讯】（大纪元记者李睿澳洲悉尼采访报导）澳洲资深法学家、澳洲新闻理事会（Australian Press Council）前主席大卫·弗林特教授（Prof David Flint）预测，即将在本周六（10月14日）举行的原住民“议会之声”（THE VOICE）修宪公投最终将以失败落幕。</p>
+<p>周一（10月9日），弗林特教授在澳洲人立宪君主制（Australians for Constitutional Monarchy）年会期间对大纪元表示，澳洲24年来的首次公投将面临比1999年共和制公投遭遇更大的失败。</p>
+<figure id="attachment_14091903" aria-describedby="caption-attachment-14091903" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/10/id14091903-ACM-panel.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14091903" src="https://i.epochtimes.com/assets/uploads/2023/10/id14091903-ACM-panel-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14091903" class="wp-caption-text">2023年10月9日，澳洲人立宪君主制（Australians for Constitutional Monarchy）年会现场。（李睿／大纪元）</figcaption></figure>
 <p>1999年11月6日，澳洲人曾就是否结束君主立宪制，建立共和制进行了公投。结果，54.87%澳洲人坚持拥护君主立宪制，共和制公投失败。</p>
-<p>这位在1999年共和制公投中坚定维护君主立宪制的领军人物说，政府推动的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E2%80%9C%E8%AE%AE%E4%BC%9A%E4%B9%8B%E5%A3%B0%E2%80%9D.md#1">“议会之声”</a>公投没有说服澳洲人此次修宪是必须的。</p>
+<p>这位在1999年共和制公投中坚定维护君主立宪制的领军人物说，政府推动的“议会之声”公投没有说服澳洲人此次修宪是必须的。</p>
 <p>他援引已故法官约翰·比奎克（John Quick）和已故律师罗伯特·加兰（Robert Garran）在《澳洲联邦宪法注释（1901年版）》中的注释，即修宪应鼓励讨论，直到人们普遍认为变革是可取的、不可抗拒的和不可避免的。</p>
 <p>“这是他们在1901年制定的修宪前提，人们必须就修宪达成共识……它（此次公投）不属于不可抗拒的范围之内。”他说。</p>
 <p>他还表示，此次“议会之声”公投的主要支持者拒绝充分辩论。</p>
@@ -24,10 +24,10 @@
 <p>确认的公投问题将是：“一项拟议法律：通过建立一个原住民和托雷斯海峡岛民之声机构，以修正宪法来认可澳洲的原住民。你是否同意这项拟议的修改？”</p>
 <p>澳洲原住民包括澳洲大陆原住民（Aboriginal people）和托雷斯海峡岛民（Torres Strait Islander people），约占澳洲人口的3.2%。</p>
 <h2>前总理：公投将遭遇重大失败</h2>
-<p>弗林特教授并不是预测“议会之声”修宪公投将以失败告终的唯一个知名人物。</p>
+<p>弗林特教授并不是预测“议会之声”修宪公投将以失败告终的唯一知名人物。</p>
 <p>在公投日宣布之前，澳洲任期第二长的前总理约翰·霍华德（John Howard）也做出了大胆预测。他认为“议会之声”公投不仅会失败，而且会遭遇“重大失败”。这位前总理在其84岁生日（7月26日）接受澳洲人报采访时表达了这一观点。</p>
-<p>10月9日，在澳洲人立宪君主制年会上播放的一段专访视频中，这位前总理说，政府没有解释修宪的含义。</p>
-<figure id="attachment_14091895" aria-describedby="caption-attachment-14091895" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/10/id14091895-JOhn-Howard.jpg"><img class="size-large wp-image-14091895" src="https://i.epochtimes.com/assets/uploads/2023/10/id14091895-JOhn-Howard-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14091895" class="wp-caption-text">2023年10月9日，在澳洲人立宪君主制年会上播放的一段专访视频中，前总理约翰·霍华德（John Howard）重申反对议会之声。（李睿／大纪元）</figcaption></figure>
+<p>10月9日，在澳洲人立宪君主制年会上播放的一段<span style="color: #0000ff;"><a style="color: #0000ff;" href="https://watch.adh.tv/australians-for-constitutional-monarchy-24th-national-conference/videos/exclusive-interview-25th-prime-minister-hon-john-howard-om-ac" target="_blank" rel="noopener noreferrer">专访视频</a></span>中，这位前总理说，政府没有解释修宪的含义。</p>
+<figure id="attachment_14091895" aria-describedby="caption-attachment-14091895" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/10/id14091895-JOhn-Howard.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14091895" src="https://i.epochtimes.com/assets/uploads/2023/10/id14091895-JOhn-Howard-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14091895" class="wp-caption-text">2023年10月9日，在澳洲人立宪君主制年会上播放的一段专访视频中，前总理约翰·霍华德（John Howard）重申反对议会之声。（李睿／大纪元）</figcaption></figure>
 <p>“我的意思是，任何政府，无论是工党还是联盟党，在提出修宪时，首要职责就是公开地、坦诚地告诉人们修改宪法涉及的内容。”他在弗林特教授对其专访的视频中说到。</p>
 <p>“如果你要人们支持你，你应该告诉他们你要求他们支持什么，尤其是在涉及修改我们的宪法时。”</p>
 <p>这位前总理还补充说，“关于我们的宪法，它有缺陷或不足。这是一份在上世纪初制定的文献，但它一直运作得很好。”</p>
@@ -41,40 +41,41 @@
 <p><strong><b>了解更多澳洲即时要闻及生活资讯，请点击?</b></strong><span lang="en-US"><strong><ahref="http://dajiyuan.com.au/"><b>dajiyuan.com.au</b></a></strong></span></p>
 <p><strong><b>（本文未经许可不得转载或建立镜像网站）</b></strong></p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/10/n14091881.md#1">研究：澳洲人越来越胖 飞机座位需重新设计</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/10/n14091857.md#1">近八成澳煤矿行业工作将在2050年前消失</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/9/n14091773.md#1">哈马斯袭击中 悉尼人朋友一家五口被杀害</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/10/n14091791.md#1">以色列国旗灯光照亮全澳地标建筑 副总理致辞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/9/n14091777.md#1">珀斯76岁老妪身材如靓女 揭保持青春之秘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/9/n14091300.md#1">澳洲总理：支持巴勒斯坦的游行应该取消</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/9/n14091272.md#1">近500万人下月可免费接种带状疱疹疫苗</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/9/n14091242.md#1">强降雨未能扭转干旱 农民担忧粮食减产</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/9/n14091223.md#1">忧李斯特菌污染 全澳紧急召回两款热销奶酪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310190.md#1">联合行动 执法人员黄金海岸查获大量非法烟草</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310241.md#1">南澳自由党新领袖誓言要赢州选举</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14310043.md#1">昆州大量危急病人上错医院 协会吁加强教育</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310075.md#1">澳洲年底前推出手机数字身份验证平台</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310062.md#1">研究：澳洲多数婴幼儿食品不符合健康标准</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310196.md#1">就业市场缩水 招聘广告大幅下降</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310165.md#1">澳洲第二季度年工资增长率增至4.1%</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310139.md#1">利率保持稳定后 消费者信心回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310058.md#1">扩展产品线 JB Hi-Fi收购E&S Trading</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310086.md#1">悉尼中国留学生情侣殒命 一人跳楼一人中刀</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/13/n10139150.md#1" target="_blank">袁斌：中共非法抢劫剥夺富人财产的真相</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/23/n11273948.md#1" target="_blank">青年大法弟子：我们为何会坚持修炼如初</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/27/n9996650.md#1" target="_blank">揭秘“四一二反革命政变”的历史真相（上）</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/5/13/n7891043.md#1" target="_blank">永恒的感恩</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/6/n14089189.md#1">【未解之谜】阿南德再预言 大地震在路上？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/2/n14086165.md#1">【未解之谜】影响中国命运的7位女人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/27/n14082314.md#1">蒋介石的车游和几个亲民小故事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/4/n14087653.md#1">这人做了坏事 为何四世后才遭到报应？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062271.md#1">【古道人生】嫌贫爱富的妹妹要和姐姐互换未婚夫</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/9/n14091244.md#1">【马克时空】俄乌战争 西方火炮对决俄军火炮</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/9/n14091552.md#1">【舞蹈三剑客】中国礼仪知多少？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/7/n14090433.md#1">【中国禁闻】北京儿童医院爆满 输液阵势40年未见</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/6/n14089263.md#1">【更新】杭州亚运 台湾奖牌数看这里</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/8/n14090754.md#1">【更新】哈马斯突袭 以色列至少700人死亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/7/n14090477.md#1">“一带一路”在芬兰留下一堆烂尾工程</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/7/n14090505.md#1">詹雅雯放弃治疗帕金森氏症 自曝停药出现失明</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/6/n14089939.md#1">再晒一家四口海边牵手合照 孙俪感慨时光飞逝</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/8/n14090938.md#1">获刑13年后 吴亦凡被强制执行1800万元</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/8/n14090954.md#1">妲己饰演者傅艺伟30岁演员儿子骤逝 死因曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/7/n14090091.md#1">经济低迷 十一假中国票房创近5年来次低</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/21/n14078551.md#1">这些癌症突然不医而愈 医生这样解释原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/2/n14086806.md#1">越吃越苗条！早餐来碗蔬菜汤 瘦身防癌抗衰老</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/6/n14089707.md#1">不止减肥降糖 抗老圣品火龙果8大好处</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/3/n14087390.md#1">抗炎止疼、改善自体免疫疾病 生酮饮食安全吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/8/n14090738.md#1">旅馆员工透露5个业界秘密 房客不知不可</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309049.md#1">目睹圣母玛利亚雕像眨眼睛 美俄州民众称奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302522.md#1">【古道人生】相士说他是石崇再世 致富之机全在意想之外！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/13/n14310055.md#1">【新闻看点】张又侠表忠是求饶 秦刚再见不到？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309753.md#1">【新闻大家谈】惊天案：央企卖尸体 党媒造反？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309979.md#1">【秦鹏观察】乌军攻入俄罗斯 中俄朝各打小算盘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308743.md#1">用特斯拉皮卡种地走红 美农场主：真的很快</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308673.md#1">【更新】2024年巴黎奥运奖牌榜 8月10日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308823.md#1">17岁美华裔女生开副业 月进7.1万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308866.md#1">刻画外卖骑手生活 徐峥《逆行人生》评论两极</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14308912.md#1">罗时丰切割下架YT影片 “侄子”获店家力挺打气</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309654.md#1">如何从指甲看出身体是否健康？ 专家这么说</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307005.md#1">到星巴克怎么点？TOP7健康饮品及点餐5技巧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308183.md#1">木瓜促消化、护眼 这些美味吃法为健康加分</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/10/10/n14091879.htm">资深法学家：“议会之声”修宪公投将失败</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/10/10/n14091879.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/10/10/n14091879.htm">资深法学家：“议会之声”修宪公投将失败</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/10/10/n14091879.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
